[gd_scene load_steps=8 format=3 uid="uid://w18q6ojqd65j"]

[ext_resource type="Script" uid="uid://7i2j8ks4b4mt" path="res://Scripts/menu.gd" id="1_ouk20"]
[ext_resource type="Texture2D" uid="uid://dedqg2vunl4rj" path="res://Im√°genes/image.png" id="2_ouk20"]
[ext_resource type="AudioStream" uid="uid://bcyo4nvuk0duy" path="res://Sonidos y BSO/magic-intro-103889.mp3" id="3_17m5t"]
[ext_resource type="AudioStream" uid="uid://dbhk00cpj1xnt" path="res://Sonidos y BSO/button-8-88355.mp3" id="4_cp3rd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lhbbi"]
bg_color = Color(0.4862745, 0.1764706, 0.13725491, 0.84705883)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjkv5"]
bg_color = Color(0.28561357, 0.15408006, 0.1185352, 0.90588236)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00ld1"]
bg_color = Color(0.6117647, 0.1764706, 0.13725491, 0.8627451)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouk20")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -567.0
offset_top = -326.0
offset_right = 607.0
offset_bottom = 387.0
mouse_filter = 2
texture = ExtResource("2_ouk20")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -273.0
offset_top = -61.0
offset_right = 278.0
offset_bottom = 352.0
alignment = 1

[node name="NEW" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lhbbi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gjkv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_00ld1")
text = "NUEVA PARTIDA
"

[node name="CONTROLS" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lhbbi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gjkv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_00ld1")
text = "CONTROLES
"

[node name="QUIT" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lhbbi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gjkv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_00ld1")
text = "SALIR
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_17m5t")
volume_db = -43.289
autoplay = true
playback_type = 1
parameters/looping = true

[node name="Sound_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cp3rd")
volume_db = -30.227
playback_type = 1

[connection signal="pressed" from="VBoxContainer/NEW" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/CONTROLS" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
